--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: colinaaa/setup-riscv-gnu-toolchain@latest
     - name: Build
       run: cargo build --verbose
     - name: Run tests
