--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: colinaaa/setup-riscv-gnu-toolchain@latest
+      with:
+      release-date: 2020.08-1
     - name: Build
       run: cargo build --verbose
     - name: Run tests
