--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: colinaaa/setup-riscv-gnu-toolchain@latest
-      with:
-      release-date: 2020.08-1
+    - name: Setup riscv-gnu-toolchain
+      uses: colinaaa/setup-riscv-gnu-toolchain@v1.0.2
     - name: Build
       run: cargo build --verbose
     - name: Run tests
