--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
     - name: Setup riscv-gnu-toolchain
       uses: colinaaa/setup-riscv-gnu-toolchain@v1.0.2
     - name: Build
+      uses: colinaaa/setup-riscv-gnu-toolchain@v1.0.2
       run: cargo build --verbose
     - name: Run tests
+      uses: colinaaa/setup-riscv-gnu-toolchain@v1.0.2
       run: cargo test --verbose
