--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup riscv-gnu-toolchain
-      uses: colinaaa/setup-riscv-gnu-toolchain@v1.0.2
+    - uses: actions-rs/toolchain@v1
+      with:
+        target: riscv64imac-unknown-none-elf
     - name: Build
       run: cargo build --verbose
     - name: Run tests
