--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
     - name: Setup riscv-gnu-toolchain
       uses: actions-rs/toolchain@v1
       with:
+        toolchain: stable
         target: riscv64imac-unknown-none-elf
     - name: Build
       run: cargo build --verbose
