--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup riscv-gnu-toolchain
+      uses: colinaaa/setup-riscv-gnu-toolchain@latest
+    - name: Setup cargo toolchain
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
