--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup riscv-gnu-toolchain
-      uses: colinaaa/setup-riscv-gnu-toolchain@v1.0.2
     - name: Build
-      uses: colinaaa/setup-riscv-gnu-toolchain@v1.0.2
-      run: cargo build --verbose
+      # run: cargo build --verbose
     - name: Run tests
-      uses: colinaaa/setup-riscv-gnu-toolchain@v1.0.2
-      run: cargo test --verbose
+      # run: cargo test --verbose
