--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Setup cargo toolchain
       uses: actions-rs/toolchain@v1
       with:
-        toolchain: stable
-        target: riscv64imac-unknown-none-elf
+        toolchain: nightly
+        target: riscv32imac-unknown-none-elf
     - name: Build
       run: cargo build --verbose
     - name: Run tests
