--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ opt-level = 0
 [dependencies]
 spin = "0.7.1"
 bit_field = "0.10.1"
+paste = "1.0.4"
 
 [dependencies.lazy_static]
 version = "1.0"
