--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ spin = "0.7.1"
 bit_field = "0.10.1"
 paste = "1.0.4"
 seq-macro = "0.2"
+custom_test = { path = "./src/tests/custom_test" }
+inventory = "0.1.10"
 
 [dependencies.lazy_static]
 version = "1.0"
