--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ spin = "0.7.1"
 bit_field = "0.10.1"
 paste = "1.0.4"
 seq-macro = "0.2.1"
+linked_list_allocator = "0.8.11"
 
 [dependencies.lazy_static]
 version = "1.0"
