--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [profile.release]
 debug = true
-opt-level = 0
+opt-level = 3
 
 [dependencies]
 spin = "0.7.1"
@@ -16,6 +16,7 @@ paste = "1.0.4"
 custom_test = { path = "./src/tests/custom_test" }
 seq-macro = "0.2.1"
 linked_list_allocator = "0.8.11"
+cstr_core = "0.2.3"
 
 [dependencies.lazy_static]
 version = "1.0"
