--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [profile.release]
-debug = true
+debug = false
 opt-level = 3
+lto = "fat"
 
 [dependencies]
 spin = "0.7.1"
