megapage以外も対応

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ custom_test = { path = "./src/tests/custom_test" }
 seq-macro = "0.2.1"
 linked_list_allocator = "0.8.11"
 cstr_core = "0.2.3"
+bitflags = "1.2.1"
 
 [dependencies.lazy_static]
 version = "1.0"
